Bug 481512 - Only half of the titlebar buttons are clickable when tablet mode is enabled
Summary: Only half of the titlebar buttons are clickable when tablet mode is enabled
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: window decoration (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Vlad Zahorodnii
URL:
Keywords: accessibility, qt6, regression, usability
Depends on:
Blocks:
 
Reported: 2024-02-18 13:52 UTC by Fushan Wen
Modified: 2024-02-28 16:08 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2024-02-18 13:52:56 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Enable tablet mode
2. 
3. 

OBSERVED RESULT
Titlebar buttons become glitched

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 
Qt Version: 6.6.1

ADDITIONAL INFORMATION
Comment 1 Marco Martin 2024-02-19 10:23:09 UTC
can't seem to reproduce on master+wayland?

All buttons seem to work.

or do you mean the hit area of the single button is halved?
Comment 2 Nate Graham 2024-02-21 17:26:44 UTC
Urgh, can reproduce.
Comment 3 Vlad Zahorodnii 2024-02-27 13:11:36 UTC
Why has the bug report been moved to kwin? is this a kwin bug?
Comment 4 Vlad Zahorodnii 2024-02-27 13:13:35 UTC
> is this a kwin bug?

if so, please provide more details
Comment 5 Vlad Zahorodnii 2024-02-27 13:18:18 UTC
This looks like a regression after my decoration spacer patch
Comment 6 Bug Janitor Service 2024-02-27 13:56:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/432
Comment 7 Vlad Zahorodnii 2024-02-28 16:05:29 UTC
Git commit 19684ab76c37135f994e21e1864667e18aa4e7b1 by Vlad Zahorodnii.
Committed on 27/02/2024 at 19:27.
Pushed by vladz into branch 'master'.

kdecoration: Recalculate preferred button size when tablet mode changes

M  +3    -2    kdecoration/breezebutton.cpp
M  +5    -2    kdecoration/breezedecoration.cpp
M  +3    -0    kdecoration/breezedecoration.h

https://invent.kde.org/plasma/breeze/-/commit/19684ab76c37135f994e21e1864667e18aa4e7b1