kdecoration: Recalculate preferred button size when tablet mode changes

BUG: 481512